// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (1) 1`] = `
"/**
 * prettier-ignore
 */
if (condition1) {
  foo;
}
else if (condition2) {
  bar;
}
else {
  baz;
}
"
`;

exports[`comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (2) 1`] = `
"// /* prettier-ignore */
if (condition1) {
  foo;
}
else if (condition2) {
  bar;
}
else {
  baz;
}
"
`;

exports[`ignore comment (1) 1`] = `
"// prettier-ignore
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
"
`;

exports[`ignore comment (2) 1`] = `
"/* prettier-ignore */
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
"
`;

exports[`ignore comment (3) 1`] = `
"// prettier-ignore
export function MyComponent() {
  return (
    <div>
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
    </div>
  );
}
"
`;

exports[`ignore comment (4) 1`] = `
"export function MyComponent() {
  return (
    <div>
      {/* prettier-ignore */}
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
      <button type="button" onClick={() => {}}>
        Click me
      </button>
    </div>
  );
}
"
`;

exports[`ignore comment (5) 1`] = `
"export function MyComponent() {
  return (
    <div>
      <button
        type="button"
        // prettier-ignore
        onClick={() => {}}
      >
        Click me
      </button>
      <button type="button" onClick={() => {}}>
        Click me
      </button>
    </div>
  );
}
"
`;
